name:                haskell2
version:             0.1.0.0
author:              Mikael Silvén
maintainer:          mikael@silven.nu
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.9 && <4.10
                      ,curryrs >= 0.2
  exposed-modules:     Hask
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  ghc-options:         -dynamic -fPIC -shared -o dist/libhaskell2.so
